swagger installed
