# app/Http/Controllers/AuthorController.php
@@ -8,7 +8,25 @@ use Illuminate\Http\Request;
 class AuthorController extends Controller
 {
     /**
+    * @OA\Get(
+ *     path="/api/authors",
+ *     description="Displays all the authors",
+ *     tags={"Authors"},
+     *      @OA\Response(
+        *          response=200,
+        *          description="Task failed unsuccessfully, Returns a list of all the authors in JSON format"
+        *       ),
+        *      @OA\Response(
+        *          response=401,
+        *          description="Unauthenticated",
+        *      ),
+        *      @OA\Response(
+        *          response=403,
+        *          description="Forbidden"
+        *      )
+ * )
      * Display a listing of the resource.
+     *
      *
      * @return \Illuminate\Http\Response
      */
