# app/Http/Controllers/ComicController.php
@@ -13,6 +13,24 @@ class ComicController extends Controller
     /**
      * Display a listing of the resource.
      *
+ * @OA\Get(
+ *     path="/api/comics",
+ *     description="Displays all the comics",
+ *     tags={"Comics"},
+     *      @OA\Response(
+        *          response=200,
+        *          description="Task failed unsuccessfully, Returns a list of Comics in a JSON format"
+        *       ),
+        *      @OA\Response(
+        *          response=401,
+        *          description="Unauthenticated",
+        *      ),
+        *      @OA\Response(
+        *          response=403,
+        *          description="Forbidden"
+        *      )
+ * )
+     *
      * @return \Illuminate\Http\Response
      */
     public function index()
@@ -22,6 +40,33 @@ class ComicController extends Controller
 
     /**
      * Store a newly created resource in storage.
+     *
+     * @OA\Post(
+     *      path="/api/comics",
+     *      operationId="store",
+     *      tags={"Comics"},
+     *      summary="Create a new Comic",
+     *      description="Stores the comic in the DB",
+     *      @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *            required={"title", "description", "genre", "author", "illustrator", "issues"},
+     *            @OA\Property(property="title", type="string", format="string", example="Sample Title"),
+     *            @OA\Property(property="description", type="string", format="string", example="Interesting bit of text"),
+     *            @OA\Property(property="genre", type="string", format="string", example="The category of literature"),
+     *            @OA\Property(property="author", type="string", format="string", example="Person"),
+     *            @OA\Property(property="illustrator", type="string", format="string", example="Person"),
+     *             @OA\Property(property="issues", type="integer", format="integer", example="1")
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200, description="Success",
+     *          @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=""),
+     *             @OA\Property(property="data",type="object")
+     *          )
+     *     )
+     * )
      *
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
@@ -36,8 +81,32 @@ class ComicController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
+     * Display the specified comic by said ID.
+     * @OA\Get(
+    *     path="/api/comics/{id}",
+    *     description="Gets a comic by ID",
+    *     tags={"Comics"},
+    *          @OA\Parameter(
+        *          name="id",
+        *          description="Comic id",
+        *          required=true,
+        *          in="path",
+        *          @OA\Schema(
+        *              type="integer")
+     *          ),
+        *      @OA\Response(
+        *          response=200,
+        *          description="Successful task"
+        *       ),
+        *      @OA\Response(
+        *          response=401,
+        *          description="Unauthenticated",
+        *      ),
+        *      @OA\Response(
+        *          response=403,
+        *          description="Forbidden"
+        *      )
+ * )
      * @param  \App\Models\Comic  $comic
      * @return \Illuminate\Http\Response
      */
@@ -61,6 +130,29 @@ class ComicController extends Controller
 
         return new ComicResource($comic);
     }
+
+    /**
+     *The delete function.
+     *
+     * @OA\Delete(
+     *    path="/api/comic/{id}",
+     *    operationId="destroy",
+     *    tags={"Comics"},
+     *    summary="Delete a Comic",
+     *    description="Delete Comic",
+     *    @OA\Parameter(name="id", in="path", description="Id of a Comic", required=true,
+     *        @OA\Schema(type="integer")
+     *    ),
+     *    @OA\Response(
+     *         response=Response::HTTP_NO_CONTENT,
+     *         description="Success",
+     *         @OA\JsonContent(
+     *         @OA\Property(property="status_code", type="integer", example="204"),
+     *         @OA\Property(property="data",type="object")
+     *          ),
+     *       )
+     *      )
+     *  )
 
     /**
      * Remove the specified resource from storage.
